--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,12 @@
 <div id="tutorial" ng-include="'tuto/tuto.html'"></div>
 
 <!-- Your code here -->
-<div id="angular-app">
+<div id="angular-app"  ng-app="workshop" ng-controller="LogCtrl">
 
     <header>
         <div>
-            <input type="text" />
+            <input type="text" ng-model="query" />
+			{{query}}			
         </div>
     </header>
 
@@ -41,12 +42,12 @@
 
     <div id="content">
         <table>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+            <tr ng-repeat="log in logs">
+                <td ng-model="log.date"></td>
+                <td ng-model="log.url"></td>
+                <td ng-model="log.method"></td>
+                <td ng-model="log.status"></td>
+                <td ng-model="log.message"></td>
             </tr>
         </table>
     </div>
